Expertise Card updated

--- a/expertise.html
+++ b/expertise.html
@@ -12,7 +12,6 @@
     }
 
     .card {
-
       margin: 30px auto;
       width: 100px;
       height: 100px;
@@ -22,12 +21,14 @@
     }
 
     .card .card_image {
+
       width: inherit;
       height: inherit;
       border-radius: 10px;
     }
 
     .card .card_image img {
+
       filter: grayscale(100%);
       width: inherit;
       height: inherit;
@@ -105,142 +106,169 @@
         Technical Skill:
       </h2>
 
-      <ul>
-        <li>
-          <p align="left"><b>Programming language : </b> Java, Python, C, C++, SQL </p>
-        </li>
+
+          <h3>Programming language </h3>
+
         <div class="cards-list">
 
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/java.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Java</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/python.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Python</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/c.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>C</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/c++.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>C++</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/sql.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-
-
-        </div>
-
-        <li>
-          <p align="left"><b>Markup language:</b> HTML, XML, CSS </p>
-        </li>
-        <div class="cards-list">
-
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
+              <p>SQL</p>
             </div>
           </div>
         </div>
-        <li>
-          <p align="left"><b>Database tool:</b> Firebase, MySQL</p>
-        </li>
+
+<br><br>
+          <p ><b>Markup language:</b></p>
+
         <div class="cards-list">
 
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/html.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>HTML</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/css-3.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>CSS</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="Images/skill icon/xml.png" />
+            </div>
+            <div class="card_title">
+              <p>XML</p>
+            </div>
+          </div>
+        </div>
+
+          <p ><b>Database tool:</b> </p>
+
+        <div class="cards-list">
+
+          <div class="card 3">
+            <div class="card_image">
+              <img src="Images/skill icon/firebase.png" />
+            </div>
+            <div class="card_title">
+              <p>Firebase</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="Images/skill icon/mysql.png" />
+            </div>
+            <div class="card_title">
+              <p>My SQL</p>
             </div>
           </div>
           
         </div>
-        <li>
-          <p align="left"><b>Version control tool:</b> Git</p>
-        </li>
+
+          <p ><b>Version control tool:</b></p>
+
         <div class="cards-list">
 
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/git.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Git</p>
             </div>
           </div>
 
         </div>
-        <li>
-          <p align="left"><b>Data science tools:</b> Anaconda</p>
-        </li>
+
+          <p ><b>Data science tools:</b> </p>
+
         <div class="cards-list">
 
         
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/anaconda.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Anaconda</p>
             </div>
           </div>
         </div>
-        <li>
-          <p align="left"><b>Libraries:</b> Scikit-Learn, Pandas, Keras</p>
-        </li>
+
+          <p ><b>Libraries:</b></p>
+
+        <div class="cards-list">
+
+          <div class="card 3">
+            <div class="card_image">
+              <img src="Images/skill icon/sci.png" />
+            </div>
+            <div class="card_title">
+              <p>Scikit-Learn</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="Images/skill icon/pandas.png" />
+            </div>
+            <div class="card_title">
+              <p>Pandas</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="Images/skill icon/keras.png" />
+            </div>
+            <div class="card_title">
+              <p>Keras</p>
+            </div>
+          </div>
+        </div>
+
+          <p ><b>Platform:</b> Android, Arduino, Raspberry Pi</p>
+
         <div class="cards-list">
 
           <div class="card 3">
@@ -268,107 +296,9 @@
             </div>
           </div>
         </div>
-        <li>
-          <p align="left"><b>Platform:</b> Android, Arduino, Raspberry Pi</p>
-        </li>
-        <div class="cards-list">
 
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-        </div>
-        <li>
-          <p align="left"><b>Operating system:</b> Windows, Linux, Raspbian, Android </p>
-        </li>
-        <div class="cards-list">
+          <p ><b>Operating system:</b> Windows, Linux, Raspbian, Android </p>
 
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-        </div>
-        <li>
-          <p align="left"><b>Electronic design:</b>Fritzing, Proteus, Logisim </p>
-        </li>
-        <div class="cards-list">
-
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-          <div class="card 3">
-            <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
-            </div>
-            <div class="card_title">
-              <p>Card Title</p>
-            </div>
-          </div>
-        </div>
-        <li>
-          <p align="left"><b>Editing tool:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma </p>
-        </li>
         <div class="cards-list">
 
           <div class="card 3">
@@ -403,6 +333,28 @@
               <p>Card Title</p>
             </div>
           </div>
+        </div>
+ 
+          <p ><b>Electronic design:</b>Fritzing, Proteus, Logisim </p>
+
+        <div class="cards-list">
+
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
           <div class="card 3">
             <div class="card_image">
               <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
@@ -412,7 +364,53 @@
             </div>
           </div>
         </div>
-      </ul>
+
+          <p ><b>Editing tool:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma </p>
+
+        <div class="cards-list">
+
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
+          <div class="card 3">
+            <div class="card_image">
+              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+            </div>
+            <div class="card_title">
+              <p>Card Title</p>
+            </div>
+          </div>
+        </div>
+
       <h2 align="left">
         Soft Skill:
       </h2>
