Expertise Card updated

--- a/expertise.html
+++ b/expertise.html
@@ -154,7 +154,7 @@
         </div>
 
 <br><br>
-          <p ><b>Markup language:</b></p>
+<h3>Markup language </h3>
 
         <div class="cards-list">
 
@@ -184,7 +184,8 @@
           </div>
         </div>
 
-          <p ><b>Database tool:</b> </p>
+        <br><br>
+        <h3>Database tool</h3>
 
         <div class="cards-list">
 
@@ -207,7 +208,8 @@
           
         </div>
 
-          <p ><b>Version control tool:</b></p>
+        <br><br>
+        <h3>Version control tool</h3>
 
         <div class="cards-list">
 
@@ -222,7 +224,8 @@
 
         </div>
 
-          <p ><b>Data science tools:</b> </p>
+        <br><br>
+        <h3>Data science tools</h3>
 
         <div class="cards-list">
 
@@ -237,7 +240,8 @@
           </div>
         </div>
 
-          <p ><b>Libraries:</b></p>
+        <br><br>
+        <h3>Libraries</h3>
 
         <div class="cards-list">
 
@@ -267,105 +271,108 @@
           </div>
         </div>
 
-          <p ><b>Platform:</b> Android, Arduino, Raspberry Pi</p>
+        <br><br>
+        <h3>Platform</h3>
 
         <div class="cards-list">
 
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/android.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Android</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/Arduino.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Arduino</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/raspberrypi.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Raspberry Pi</p>
             </div>
           </div>
         </div>
 
-          <p ><b>Operating system:</b> Windows, Linux, Raspbian, Android </p>
-
+        <br><br>
+        <h3>Operating system</h3>
         <div class="cards-list">
 
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/windows.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Windows</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/linux.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Linux</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/raspbian.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Raspbian</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/android.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Android</p>
             </div>
           </div>
         </div>
  
-          <p ><b>Electronic design:</b>Fritzing, Proteus, Logisim </p>
-
+<br><br>
+<h3>Electronic design </h3>
         <div class="cards-list">
 
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/fritzing-icon.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Fritzing</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/proteus.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Proteus</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/logisim.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Logisim</p>
             </div>
           </div>
         </div>
 
-          <p ><b>Editing tool:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma </p>
+        <br><br>
+        <h3>Editing tool</h3>
+          <p ><b>:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma </p>
 
         <div class="cards-list">
 
