Expertise Card updated

--- a/expertise.html
+++ b/expertise.html
@@ -372,48 +372,45 @@
 
         <br><br>
         <h3>Editing tool</h3>
-          <p ><b>:</b>Sketch Up, Adobe (Photoshop, Illustrator, Premier Pro), Figma </p>
-
         <div class="cards-list">
-
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/photoshop.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Adobe Photoshop</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/illustrator.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Adobe Illustrator</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/premirepro.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Adobe Premier Pro</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/figma.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Figma</p>
             </div>
           </div>
           <div class="card 3">
             <div class="card_image">
-              <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+              <img src="Images/skill icon/sketchup.png" />
             </div>
             <div class="card_title">
-              <p>Card Title</p>
+              <p>Sketch Up</p>
             </div>
           </div>
         </div>
