Expertise style added

--- a/expertise.html
+++ b/expertise.html
@@ -5,140 +5,7 @@
   <title>Expertise</title>
   <link rel="icon" type="image/x-icon" href="Images/Logo.png">
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    .cards-list {
-      width: 1000px;
-      display: flex;
-    }
-
-    .card {
-      margin: 30px auto;
-      width: 100px;
-      height: 100px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 15px 3px rgba(0, 0, 0, 0.12), -2px -2px 15px 3px rgba(0, 0, 0, 0.11);
-      transition: 0.4s;
-    }
-
-    .card .card_image {
-
-      width: inherit;
-      height: inherit;
-      border-radius: 10px;
-    }
-
-    .card .card_image img {
-
-      filter: grayscale(100%);
-      width: inherit;
-      height: inherit;
-      border-radius: 10px;
-      object-fit: cover;
-    }
-
-    .card .card_title {
-      text-align: center;
-      border-radius: 0px 0px 40px 40px;
-      font-family: sans-serif;
-      font-weight: bold;
-      font-size: 15px;
-      margin-top: -5px;
-
-    }
-
-    .card:hover {
-
-      transform: scale(0.9, 0.9);
-      box-shadow: 2px 2px 15px 7px rgba(0, 0, 0, 0.12),
-        -2px -2px 15px 7px rgba(0, 0, 0, 0.11);
-    }
-
-    .card .card_image img:hover {
-      filter: grayscale(0%);
-    }
-
-
-    .title-black {
-      color: black;
-    }
-
-    @media all and (max-width: 500px) {
-      .card-list {
-        /* On small screens, we are no longer using row direction but column */
-        flex-direction: column;
-      }
-    }
-    body .csoftskill {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-body .csoftskill .card {
-  position: relative;
-  min-width: 200px;
-  height: 300px;
-  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
-    inset -5px -5px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
-  border-radius: 15px;
-  margin: 10px;
-  transition: 0.5s;
-}
-
-
-body .csoftskill .card .box {
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  right: 5px;
-  bottom: 5px;
-  background: #2a2b2f;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  transition: 0.5s;
-}
-
-body .csoftskill .card .box:hover {
-  transform: translateY(-50px);
-}
-
-body .csoftskill .card .box:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.03);
-}
-
-body .csoftskill .card .box .contentss {
-  text-align: center;
-}
-
-
-body .csoftskill .card .box .contentss h3 {
-  font-size: 1.3rem;
-  color: #fff;
-  z-index: 1;
-  transition: 0.5s;
-  margin-bottom: 20px;
-}
-
-body .csoftskill .card .box .contentss p {
-  color: rgba(255, 255, 255, 0.9);
-  transition: 0.5s;
-  line-height: normal;
-  text-align: center;
-  margin: 10px;
-}
-
-  </style>
+  <link rel="stylesheet" href="css/styleexpartise.css">
 </head>
 
 <body>
