Hamburger menue added

--- a/hobbies/gallery.html
+++ b/hobbies/gallery.html
@@ -84,9 +84,12 @@ a:active { background: #ffca28; }
         <div class="navicon">
           <div></div>
         </div>
-        <a><form>
-            <input type="button" value="Back" onclick="history.go(-1)">
-           </form></a>
+      
+        <a>Home</a>
+        <a>Photography</a>
+        <a>Design</a>
+        <a>Blog</a>
+        <a>Back</a>
       
       </nav>
 </body>
