back bytton in hobbies completed

--- a/hobbies/photography.html
+++ b/hobbies/photography.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
-<html lang="en">
-<head>
-  
 
+<html>
+<head>
+    <title>Photography</title>
+    <link rel="icon" type="image/x-icon" href="../Images/Logo.png">
+    <link rel="stylesheet" href="hobbystyle.css">
+    <style>
+
+
+
+    </style>
 </head>
 <body>
-
+  <div class="outer">
+    <div class="inner">
+      <label>
+        <a href="#" onclick="history.go(-1)"> Back</a>
+      </label>
+    </div>
+  </div>
 
 </body>
 </html>
