--- a/hobbies/photography.html
+++ b/hobbies/photography.html
@@ -19,6 +19,73 @@
       </label>
     </div>
   </div>
+  <h1 align="center">Saif's Gallery</h1>
+  <br><br>
 
+  <div class="gallery" id="gallery">
+      <div class="gallery-item">
+          <div class="content"><img src="/hobbies/PhotographyImage/1.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/2.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/3.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/4.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/5.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/6.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/7.png" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/8.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/PhotographyImage/" alt=""></div>
+      </div>
+      
+  </div>
+   <script>
+    var gallery = document.querySelector('#gallery');
+var getVal = function (elem, style) { return parseInt(window.getComputedStyle(elem).getPropertyValue(style)); };
+var getHeight = function (item) { return item.querySelector('.content').getBoundingClientRect().height; };
+var resizeAll = function () {
+    var altura = getVal(gallery, 'grid-auto-rows');
+    var gap = getVal(gallery, 'grid-row-gap');
+    gallery.querySelectorAll('.gallery-item').forEach(function (item) {
+        var el = item;
+        el.style.gridRowEnd = "span " + Math.ceil((getHeight(item) + gap) / (altura + gap));
+    });
+};
+gallery.querySelectorAll('img').forEach(function (item) {
+    item.classList.add('byebye');
+    if (item.complete) {
+        console.log(item.src);
+    }
+    else {
+        item.addEventListener('load', function () {
+            var altura = getVal(gallery, 'grid-auto-rows');
+            var gap = getVal(gallery, 'grid-row-gap');
+            var gitem = item.parentElement.parentElement;
+            gitem.style.gridRowEnd = "span " + Math.ceil((getHeight(gitem) + gap) / (altura + gap));
+            item.classList.remove('byebye');
+        });
+    }
+});
+window.addEventListener('resize', resizeAll);
+gallery.querySelectorAll('.gallery-item').forEach(function (item) {
+    item.addEventListener('click', function () {        
+        item.classList.toggle('full');        
+    });
+});
+
+   </script>
 </body>
 </html>
