Designer pic added

--- a/hobbies/photography.html
+++ b/hobbies/photography.html
@@ -19,7 +19,7 @@
       </label>
     </div>
   </div>
-  <h1 align="center">Saif's Gallery</h1>
+  <h1 align="center">Saif's Photography</h1>
   <br><br>
 
   <div class="gallery" id="gallery">
