--- a/hobbies/blog.html
+++ b/hobbies/blog.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Blog</title>
+    <title>Video</title>
     <link rel="icon" type="image/x-icon" href="../Images/Logo.png">
     <link rel="stylesheet" href="hobbystyle.css">
     <style>
