Design poster and banner updated

--- a/hobbies/design.html
+++ b/hobbies/design.html
@@ -19,7 +19,7 @@
       </label>
     </div>
   </div>
-  <h1 align="center">Logo</h1>
+  <h1 align="center">Logo, Poster, Banner and Wallpaper</h1>
   <br><br>
 
   <div class="gallery" id="gallery">
@@ -50,8 +50,52 @@
       <div class="gallery-item">
         <div class="content"><img src="/hobbies/DesignImage/logo/9.png" alt=""></div>
       </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/1.png" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/2.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/3.png" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/4.png" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/5.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/6.jpg" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
+      <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+      </div>
       
   </div>
+
+
    <script>
     var gallery = document.querySelector('#gallery');
 var getVal = function (elem, style) { return parseInt(window.getComputedStyle(elem).getPropertyValue(style)); };
