Design wallpaper updated

--- a/hobbies/design.html
+++ b/hobbies/design.html
@@ -69,28 +69,28 @@
         <div class="content"><img src="/hobbies/DesignImage/bannerposter/6.jpg" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/1.png" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/2.png" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/3.png" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/4.png" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/5.jpg" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/6.png" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/7.png" alt=""></div>
       </div>
       <div class="gallery-item">
-        <div class="content"><img src="/hobbies/DesignImage/wallpaper/" alt=""></div>
+        <div class="content"><img src="/hobbies/DesignImage/wallpaper/8.png" alt=""></div>
       </div>
       
   </div>
