--- a/hobbies/photography.html
+++ b/hobbies/photography.html
@@ -52,6 +52,10 @@
       </div>
       
   </div>
+  <br><br>
+  <h5 align="center">© All Right Reserved</h5>
+  <br><br>
+
    <script>
     var gallery = document.querySelector('#gallery');
 var getVal = function (elem, style) { return parseInt(window.getComputedStyle(elem).getPropertyValue(style)); };
