--- a/hobbies/design.html
+++ b/hobbies/design.html
@@ -94,7 +94,9 @@
       </div>
       
   </div>
-
+  <br><br>
+  <h5 align="center">© All Right Reserved</h5>
+  <br><br>
 
    <script>
     var gallery = document.querySelector('#gallery');
