Replced blog to video

--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
   <div align="center" class="content">
     ​<div id="mySidenav" class="sidenav">
       <a href="hobbies/gallery.html" id="gallery">Gallery</a>
-      <a href="hobbies/blog.html" id="blog">Blog</a>
+      <a href="hobbies/blog.html" id="blog">Video</a>
       <a href="hobbies/photography.html" id="projects">Photography</a>
       <a href="hobbies/design.html" id="contact">Design</a>
     </div>
