--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   <div align="center" class="content">
     ​<div id="mySidenav" class="sidenav">
       <a href="hobbies/gallery.html" id="gallery">Gallery</a>
-      <a href="hobbies/blog.html" id="blog">Blog</a>
+      <a href="hobbies/blog.html" id="blog">Video</a>
       <a href="hobbies/photography.html" id="projects">Photography</a>
       <a href="hobbies/design.html" id="contact">Design</a>
     </div>
