--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
           My area of expertise is <b>artificial intelligence</b> and <b>android app development</b> .
           In addition, I have knowledge of <b>robotics, graphics design, flutter app development,
             internet of things</b> and so on. In my leisure time, I like to play FIFA, GTA V, and
-          Valorant. I enjoy doing Photography, watching web series and fiction
+          Valorant. I enjoy doing photography, watching web series and fiction
           movies. Football is one of my favorite sports to play and watch.
         </p>
       </div>
