--- a/hobbies/blog.html
+++ b/hobbies/blog.html
@@ -10,15 +10,16 @@
   <style>
 .grid-container {
   display: grid;
-  gap: 50px 50px;
+  gap: 20px 10px;
   grid-template-columns: auto auto auto auto;
-  padding: 10px;
+  padding: 5px;
 }
 
 .grid-item {
   padding: 10px;
   text-align: center;
 }
+
   </style>
 </head>
 <body>
@@ -34,24 +35,22 @@
 
   <div class="grid-container">
     <div class="grid-item">
-      <iframe width="400" height="300" src="https://www.youtube.com/embed/B2wrR83FME8">
-      </iframe>
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/B2wrR83FME8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="grid-item">
-      <iframe width="400" height="300" src="">
-      </iframe>
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/chtyZjfXRnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="grid-item">
-
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/QqG1ac6Btmg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>  
     <div class="grid-item">
-
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/UlMdcUFTXFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="grid-item">
-
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/XabWJmdaHhg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="grid-item">
-
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/hvcfLS1uOt8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>  
     <div class="grid-item">
 
