--- a/hobbies/blog.html
+++ b/hobbies/blog.html
@@ -11,7 +11,7 @@
 .grid-container {
   display: grid;
   gap: 20px 10px;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   padding: 5px;
 }
 
@@ -19,7 +19,30 @@
   padding: 10px;
   text-align: center;
 }
+@media screen and (max-width: 2000px) {
+  .grid-container {
+  grid-template-columns: auto auto auto auto;
 
+}
+}
+@media screen and (max-width: 1600px) {
+  .grid-container {
+  grid-template-columns: auto auto auto;
+
+}
+}
+@media screen and (max-width: 1280px) {
+  .grid-container {
+  grid-template-columns: auto auto;
+
+}
+}
+@media screen and (max-width: 900px) {
+  .grid-container {
+  grid-template-columns: auto;
+
+}
+}
   </style>
 </head>
 <body>
