Side nav bar bug fixed

--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
   <div align="center" class="content">
     ​<div id="mySidenav" class="sidenav">
       <a href="hobbies/gallery.html" id="gallery">Gallery</a>
-      <a href="hobbies/blog.html" id="blog">Video</a>
-      <a href="hobbies/photography.html" id="projects">Photography</a>
-      <a href="hobbies/design.html" id="contact">Design</a>
+      <a href="hobbies/photography.html" id="photography">Photography</a>
+      <a href="hobbies/design.html" id="design">Design</a>
+      <a href="hobbies/videos.html" id="video">Video</a>
     </div>
     <div class="pagebackground">
       <div class="containeraboutpic">
